Added array declarations

--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,6 @@
     <modules>
         <module>compiler-core</module>
         <module>veny-cli</module>
+        <module>stdlib</module>
     </modules>
 </project>
