Stdlib changes, runtime, String => Text

--- a/compiler-core/pom.xml
+++ b/compiler-core/pom.xml
@@ -24,6 +24,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.venylang</groupId>
+            <artifactId>stdlib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- JUnit for testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
