--- a/compiler-core/pom.xml
+++ b/compiler-core/pom.xml
@@ -44,6 +44,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.11.0</version> <!-- Use the latest 5.x available -->
+            <scope>test</scope>
+        </dependency>
+
         <!-- Commons Lang (for utility functions, if needed) -->
         <dependency>
             <groupId>org.apache.commons</groupId>
