--- a/veny-cli-picocli/pom.xml
+++ b/veny-cli-picocli/pom.xml
@@ -46,5 +46,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.venylang</groupId>
+            <artifactId>compiler-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
