--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
         <module>stdlib</module>
         <module>veny-cli-picocli</module>
         <module>runtime</module>
+        <module>examples</module>
     </modules>
 </project>
